tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__block_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Statement(
  span: Span(
    start: Location(
      file_name: "block_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "block_statement",
      position: 15,
      line: 1,
      column: 16,
    ),
  ),
  kind: Block(
    statements: [
      Statement(
        span: Span(
          start: Location(
            file_name: "block_statement",
            position: 2,
            line: 1,
            column: 3,
          ),
          end: Location(
            file_name: "block_statement",
            position: 13,
            line: 1,
            column: 14,
          ),
        ),
        kind: VariableDeclaration(
          name: "x",
          ty: None,
          value: Expression(
            span: Span(
              start: Location(
                file_name: "block_statement",
                position: 10,
                line: 1,
                column: 11,
              ),
              end: Location(
                file_name: "block_statement",
                position: 12,
                line: 1,
                column: 13,
              ),
            ),
            kind: IntegerLiteral(
              value: "42",
              radix: 10,
            ),
          ),
        ),
      ),
    ],
  ),
))
