tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__for_loop_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Statement(
  span: Span(
    start: Location(
      file_name: "for_loop_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "for_loop_statement",
      position: 47,
      line: 1,
      column: 48,
    ),
  ),
  kind: ForInitCondUpdate(
    initialization: Statement(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 14,
          line: 1,
          column: 15,
        ),
      ),
      kind: VariableDeclaration(
        name: "i",
        ty: None,
        value: Expression(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 12,
              line: 1,
              column: 13,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 13,
              line: 1,
              column: 14,
            ),
          ),
          kind: IntegerLiteral(
            value: "0",
            radix: 10,
          ),
        ),
      ),
    ),
    condition: Statement(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 15,
          line: 1,
          column: 16,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 22,
          line: 1,
          column: 23,
        ),
      ),
      kind: Expression(
        expression: Expression(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 15,
              line: 1,
              column: 16,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 21,
              line: 1,
              column: 22,
            ),
          ),
          kind: BinaryOperation(
            left: Expression(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 15,
                  line: 1,
                  column: 16,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 16,
                  line: 1,
                  column: 17,
                ),
              ),
              kind: Variable(
                name: "i",
              ),
            ),
            operator: BinaryOperator(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 17,
                  line: 1,
                  column: 18,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 18,
                  line: 1,
                  column: 19,
                ),
              ),
              kind: LessThan,
            ),
            right: Expression(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 19,
                  line: 1,
                  column: 20,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 21,
                  line: 1,
                  column: 22,
                ),
              ),
              kind: IntegerLiteral(
                value: "10",
                radix: 10,
              ),
            ),
          ),
        ),
      ),
    ),
    update: Statement(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 23,
          line: 1,
          column: 24,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 33,
          line: 1,
          column: 34,
        ),
      ),
      kind: Expression(
        expression: Expression(
          span: Span(
            start: Location(
              file_name: "for_loop_statement",
              position: 23,
              line: 1,
              column: 24,
            ),
            end: Location(
              file_name: "for_loop_statement",
              position: 32,
              line: 1,
              column: 33,
            ),
          ),
          kind: BinaryOperation(
            left: Expression(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 23,
                  line: 1,
                  column: 24,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 24,
                  line: 1,
                  column: 25,
                ),
              ),
              kind: Variable(
                name: "i",
              ),
            ),
            operator: BinaryOperator(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 25,
                  line: 1,
                  column: 26,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 26,
                  line: 1,
                  column: 27,
                ),
              ),
              kind: Assignment,
            ),
            right: Expression(
              span: Span(
                start: Location(
                  file_name: "for_loop_statement",
                  position: 27,
                  line: 1,
                  column: 28,
                ),
                end: Location(
                  file_name: "for_loop_statement",
                  position: 32,
                  line: 1,
                  column: 33,
                ),
              ),
              kind: BinaryOperation(
                left: Expression(
                  span: Span(
                    start: Location(
                      file_name: "for_loop_statement",
                      position: 27,
                      line: 1,
                      column: 28,
                    ),
                    end: Location(
                      file_name: "for_loop_statement",
                      position: 28,
                      line: 1,
                      column: 29,
                    ),
                  ),
                  kind: Variable(
                    name: "i",
                  ),
                ),
                operator: BinaryOperator(
                  span: Span(
                    start: Location(
                      file_name: "for_loop_statement",
                      position: 29,
                      line: 1,
                      column: 30,
                    ),
                    end: Location(
                      file_name: "for_loop_statement",
                      position: 30,
                      line: 1,
                      column: 31,
                    ),
                  ),
                  kind: Addition,
                ),
                right: Expression(
                  span: Span(
                    start: Location(
                      file_name: "for_loop_statement",
                      position: 31,
                      line: 1,
                      column: 32,
                    ),
                    end: Location(
                      file_name: "for_loop_statement",
                      position: 32,
                      line: 1,
                      column: 33,
                    ),
                  ),
                  kind: IntegerLiteral(
                    value: "1",
                    radix: 10,
                  ),
                ),
              ),
            ),
          ),
        ),
      ),
    ),
    body: Statement(
      span: Span(
        start: Location(
          file_name: "for_loop_statement",
          position: 34,
          line: 1,
          column: 35,
        ),
        end: Location(
          file_name: "for_loop_statement",
          position: 47,
          line: 1,
          column: 48,
        ),
      ),
      kind: Block(
        statements: [
          Statement(
            span: Span(
              start: Location(
                file_name: "for_loop_statement",
                position: 36,
                line: 1,
                column: 37,
              ),
              end: Location(
                file_name: "for_loop_statement",
                position: 45,
                line: 1,
                column: 46,
              ),
            ),
            kind: Return(
              value: Some(Expression(
                span: Span(
                  start: Location(
                    file_name: "for_loop_statement",
                    position: 43,
                    line: 1,
                    column: 44,
                  ),
                  end: Location(
                    file_name: "for_loop_statement",
                    position: 44,
                    line: 1,
                    column: 45,
                  ),
                ),
                kind: Variable(
                  name: "i",
                ),
              )),
            ),
          ),
        ],
      ),
    ),
  ),
))
