tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__let_statement.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "let_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "let_statement",
      position: 11,
      line: 1,
      column: 12,
    ),
  ),
  data: VariableDeclaration(VariableDeclaration(
    name: Spanned(
      span: Span(
        start: Location(
          file_name: "let_statement",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "let_statement",
          position: 5,
          line: 1,
          column: 6,
        ),
      ),
      data: "x",
    ),
    ty: None,
    value: Spanned(
      span: Span(
        start: Location(
          file_name: "let_statement",
          position: 8,
          line: 1,
          column: 9,
        ),
        end: Location(
          file_name: "let_statement",
          position: 10,
          line: 1,
          column: 11,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "let_statement",
              position: 8,
              line: 1,
              column: 9,
            ),
            end: Location(
              file_name: "let_statement",
              position: 10,
              line: 1,
              column: 11,
            ),
          ),
          data: "42",
        ),
        radix: 10,
      ))),
    ),
  )),
))
