tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__return_statement_integer.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Statement(
  span: Span(
    start: Location(
      file_name: "return_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "return_statement",
      position: 10,
      line: 1,
      column: 11,
    ),
  ),
  kind: Return(
    value: Some(Expression(
      span: Span(
        start: Location(
          file_name: "return_statement",
          position: 7,
          line: 1,
          column: 8,
        ),
        end: Location(
          file_name: "return_statement",
          position: 9,
          line: 1,
          column: 10,
        ),
      ),
      kind: IntegerLiteral(
        value: "42",
        radix: 10,
      ),
    )),
  ),
))
