tantalum_parser/src/tests/snapshots/tantalum_parser__tests__statement__return_statement_no_expression.snap
---
source: tantalum_parser/src/tests/statement.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "return_statement",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "return_statement",
      position: 7,
      line: 1,
      column: 8,
    ),
  ),
  data: Return(Return(
    value: None,
  )),
))
